go-httpbin-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-httpbin
  labels:
    app: go-httpbin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-httpbin
  template:
    metadata:
      labels:
        app: go-httpbin
    spec:
      containers:
      - name: go-httpbin
        image: ghcr.io/mccutchen/go-httpbin:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: go-httpbin-svc
spec:
  type: ClusterIP
  selector:
    app: go-httpbin
  ports:
  - port: 80
    targetPort: 8080
